tests/neg-custom-args/hidden-type-errors/Test.scala
package t12717


object Test:

   val x = X.doSomething("XXX") // error
